Added toast notifications for login and register

--- a/register.html
+++ b/register.html
@@ -29,5 +29,10 @@
 		</main>
 
 		<script type="module" src="./js/register.js"></script>
+
+		<div
+			id="toast-container"
+			class="fixed inset-0 flex items-center justify-center pointer-events-none z-50"
+		></div>
 	</body>
 </html>
