--- a/login.html
+++ b/login.html
@@ -26,5 +26,10 @@
 		</main>
 
 		<script type="module" src="./js/login.js"></script>
+
+		<div
+			id="toast-container"
+			class="fixed inset-0 flex items-center justify-center pointer-events-none z-50"
+		></div>
 	</body>
 </html>
