Added listings on index and specific listing page

--- a/listing.html
+++ b/listing.html
@@ -3,18 +3,20 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Auction House</title>
+		<title>Listing</title>
 		<link rel="stylesheet" href="./css/style.css" />
 	</head>
+
 	<body>
 		<main>
-			<h1>Auction Listings</h1>
+			<a href="index.html">← Back to listings</a>
+			<h1>Listing</h1>
 
-			<section id="listings"></section>
+			<section id="listing"></section>
 
-			<p id="listings-error" style="color: crimson"></p>
+			<p id="listing-error" style="color: crimson"></p>
 		</main>
 
-		<script type="module" src="./js/index.js"></script>
+		<script type="module" src="./js/listing.js"></script>
 	</body>
 </html>
