--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" href="./css/style.css" />
 	</head>
 	<body>
+		<header id="main-header"></header>
+
 		<main>
 			<h1>Auction Listings</h1>
 
@@ -15,6 +17,7 @@
 			<p id="listings-error" style="color: crimson"></p>
 		</main>
 
+		<script type="module" src="./js/utils/header.js"></script>
 		<script type="module" src="./js/index.js"></script>
 	</body>
 </html>
