Added search functionality to index page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 		<main>
 			<h1>Auction Listings</h1>
 
+			<div id="search-section" style="margin: 1rem 0">
+				<input
+					type="text"
+					id="search-input"
+					placeholder="Search listings..."
+					style="padding: 0.5rem; width: 70%; max-width: 300px"
+				/>
+				<button id="search-btn" style="padding: 0.5rem">Search</button>
+			</div>
+
 			<section id="listings"></section>
 
 			<p id="listings-error" style="color: crimson"></p>
