Updated button styling and charcoal color theme

--- a/create-listing.html
+++ b/create-listing.html
@@ -63,7 +63,7 @@
 					/>
 				</div>
 
-				<button type="submit">Create listing</button>
+				<button type="submit" class="btn btn-secondary">Create listing</button>
 			</form>
 
 			<p id="create-listing-error" style="color: crimson"></p>
