--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 					placeholder="Search listings..."
 					style="padding: 0.5rem; width: 70%; max-width: 300px"
 				/>
-				<button id="search-btn" style="padding: 0.5rem">Search</button>
+				<button id="search-btn" class="btn btn-primary">Search</button>
 			</div>
 
 			<section id="listings"></section>
