--- a/login.html
+++ b/login.html
@@ -17,7 +17,7 @@
 				<label>Password</label>
 				<input id="login-password" type="password" />
 
-				<button type="submit">Log in</button>
+				<button type="submit" class="btn btn-secondary">Log in</button>
 			</form>
 
 			<p><a href="./register.html">Don’t have an account? Register</a></p>
