--- a/profile.html
+++ b/profile.html
@@ -46,7 +46,7 @@
 						></textarea>
 					</div>
 
-					<button type="submit">Save changes</button>
+					<button type="submit" class="btn btn-secondary">Save profile</button>
 				</form>
 
 				<p id="profile-edit-error" style="color: crimson"></p>
