--- a/register.html
+++ b/register.html
@@ -20,7 +20,7 @@
 				<label>Password</label>
 				<input id="reg-password" type="password" />
 
-				<button type="submit">Create account</button>
+				<button type="submit" class="btn btn-secondary">Register</button>
 			</form>
 
 			<p><a href="./login.html">Already have an account? Login</a></p>
