--- a/index.html
+++ b/index.html
@@ -28,11 +28,12 @@
 				</div>
 			</section>
 
-			<h1 class="page-title">Auction Listings</h1>
+			<div class="listing-container">
+				<h1 class="page-title">Auction Listings</h1>
 
-			<section id="listings"></section>
-
-			<p id="listings-error" style="color: crimson"></p>
+				<section id="listings" class="listing-grid"></section>
+				<p id="listings-error" style="color: crimson"></p>
+			</div>
 		</main>
 
 		<script type="module" src="./js/utils/header.js"></script>
