Styled listing page and updated layout

--- a/listing.html
+++ b/listing.html
@@ -5,16 +5,22 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Listing</title>
 		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 
 	<body>
 		<header id="main-header"></header>
 
-		<main>
+		<main class="listing-page">
 			<a href="index.html">← Back to listings</a>
 			<h1>Listing</h1>
 
-			<section id="listing"></section>
+			<section id="listing" class="listing-details-card"></section>
 
 			<p id="listing-error" style="color: crimson"></p>
 
