Styled create/edit listing page

--- a/create-listing.html
+++ b/create-listing.html
@@ -5,68 +5,78 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Create Listing</title>
 		<link rel="stylesheet" href="./css/style.css" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 
 	<body>
 		<header id="main-header"></header>
 
-		<main>
+		<main class="create-page">
 			<h1>Create a new listing</h1>
 
-			<form id="create-listing-form">
-				<div>
-					<label for="listing-title">Title</label>
-					<input id="listing-title" type="text" required />
-				</div>
+			<section class="create-listing-card">
+				<form id="create-listing-form">
+					<div>
+						<label for="listing-title">Title</label>
+						<input id="listing-title" type="text" required />
+					</div>
 
-				<div>
-					<label for="listing-description">Description</label>
-					<textarea
-						id="listing-description"
-						rows="4"
-						placeholder="Describe your item"
-					></textarea>
-				</div>
+					<div>
+						<label for="listing-description">Description</label>
+						<textarea
+							id="listing-description"
+							rows="4"
+							placeholder="Describe your item"
+						></textarea>
+					</div>
 
-				<div>
-					<label for="listing-ends-at">End date and time</label>
-					<input id="listing-ends-at" type="datetime-local" required />
-					<p style="font-size: 0.85rem">
-						The auction must end at least 1 hour in the future.
-					</p>
-				</div>
+					<div>
+						<label for="listing-ends-at">End date and time</label>
+						<input id="listing-ends-at" type="datetime-local" required />
+						<p style="font-size: 0.85rem">
+							The auction must end at least 1 hour in the future.
+						</p>
+					</div>
 
-				<div>
-					<label for="listing-media-1">Image URL 1</label>
-					<input
-						id="listing-media-1"
-						type="url"
-						placeholder="https://example.com/image.jpg"
-					/>
-				</div>
+					<div>
+						<label for="listing-media-1">Image URL 1</label>
+						<input
+							id="listing-media-1"
+							type="url"
+							placeholder="https://example.com/image.jpg"
+						/>
+					</div>
 
-				<div>
-					<label for="listing-media-2">Image URL 2 (optional)</label>
-					<input
-						id="listing-media-2"
-						type="url"
-						placeholder="https://example.com/image2.jpg"
-					/>
-				</div>
+					<div>
+						<label for="listing-media-2">Image URL 2 (optional)</label>
+						<input
+							id="listing-media-2"
+							type="url"
+							placeholder="https://example.com/image2.jpg"
+						/>
+					</div>
 
-				<div>
-					<label for="listing-media-3">Image URL 3 (optional)</label>
-					<input
-						id="listing-media-3"
-						type="url"
-						placeholder="https://example.com/image3.jpg"
-					/>
-				</div>
+					<div>
+						<label for="listing-media-3">Image URL 3 (optional)</label>
+						<input
+							id="listing-media-3"
+							type="url"
+							placeholder="https://example.com/image3.jpg"
+						/>
+					</div>
 
-				<button type="submit" class="btn btn-secondary">Create listing</button>
-			</form>
+					<button type="submit" class="btn btn-secondary">
+						Create listing
+					</button>
+				</form>
 
-			<p id="create-listing-error" style="color: crimson"></p>
+				<p id="create-listing-error" style="color: crimson"></p>
+			</section>
 		</main>
 
 		<script type="module" src="./js/utils/header.js"></script>
