Styled login and register page. Added simple footer

--- a/index.html
+++ b/index.html
@@ -38,5 +38,11 @@
 
 		<script type="module" src="./js/utils/header.js"></script>
 		<script type="module" src="./js/index.js"></script>
+
+		<footer class="site-footer">
+			<p>
+				© 2025 Noroff Auction House. Designed & Developed by Arnt Helge Vold
+			</p>
+		</footer>
 	</body>
 </html>
