--- a/listing.html
+++ b/listing.html
@@ -34,5 +34,11 @@
 			id="toast-container"
 			class="fixed inset-0 flex items-center justify-center pointer-events-none z-50"
 		></div>
+
+		<footer class="site-footer">
+			<p>
+				© 2025 Noroff Auction House. Designed & Developed by Arnt Helge Vold
+			</p>
+		</footer>
 	</body>
 </html>
