--- a/profile.html
+++ b/profile.html
@@ -73,5 +73,11 @@
 
 		<script type="module" src="./js/utils/header.js"></script>
 		<script type="module" src="./js/profile.js"></script>
+
+		<footer class="site-footer">
+			<p>
+				© 2025 Noroff Auction House. Designed & Developed by Arnt Helge Vold
+			</p>
+		</footer>
 	</body>
 </html>
