Further styling polish and adjustments

--- a/listing.html
+++ b/listing.html
@@ -22,7 +22,7 @@
 
 			<section id="listing" class="listing-details-card"></section>
 
-			<p id="listing-error" style="color: crimson"></p>
+			<p id="listing-error"></p>
 
 			<section id="bid-section"></section>
 		</main>
