Further styling polish and adjustments

--- a/create-listing.html
+++ b/create-listing.html
@@ -38,7 +38,7 @@
 					<div>
 						<label for="listing-ends-at">End date and time</label>
 						<input id="listing-ends-at" type="datetime-local" required />
-						<p style="font-size: 0.85rem">
+						<p class="field-help">
 							The auction must end at least 1 hour in the future.
 						</p>
 					</div>
@@ -75,7 +75,7 @@
 					</button>
 				</form>
 
-				<p id="create-listing-error" style="color: crimson"></p>
+				<p id="create-listing-error"></p>
 			</section>
 		</main>
 
